fix card layout, hidden overflow property

--- a/client/src/components/studio/global.less
+++ b/client/src/components/studio/global.less
@@ -130,5 +130,5 @@ textarea .ant-input,
 .ant-modal-content,
 .ant-btn-dashed {
   border-radius: 6px;
-  overflow: hidden;
+  // overflow: hidden;
 }
