--- a/client/src/layouts/global.less
+++ b/client/src/layouts/global.less
@@ -11,7 +11,7 @@
   .ant-modal-content,
   .ant-btn-dashed {
     border-radius: 6px;
-    overflow: hidden;
+    // overflow: hidden;
   }
   .ant-steps-item-finish .ant-steps-item-icon,
   .ant-input-affix-wrapper-focused,
